mmap file update

--- a/demos/file-stream/makefile
+++ b/demos/file-stream/makefile
@@ -9,5 +9,8 @@ file-cp-sc: file-cp-sc.c
 file-cp-libc: file-cp-libc.c
 	$(CC) $(CFLAGS) -o $@ $<
 
+file-cp-memmap: file-cp-memmap.c
+	$(CC) $(CFLAGS) -o $@ $<
+
 clean:
-	rm -f file-cp-sc file-cp-libc
+	rm -f file-cp-sc file-cp-libc file-cp-memmap
