--- a/demos/process-thread/4-posix-threads/makefile
+++ b/demos/process-thread/4-posix-threads/makefile
@@ -7,7 +7,7 @@ CC = gcc
 CFLAGS = -Wall -Wextra -g
 
 # Source files
-SOURCES = thread-demo thread-rc thread-coordination
+SOURCES = thread-demo thread-rc thread-coordination thread-parent-child
 
 # Executable names
 EXECUTABLES = $(SOURCES:.c=)
