--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-.vscode
-
 # General
 .DS_Store
 .AppleDouble
@@ -80,4 +78,4 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-./.vscode/settings.json
+.vscode/settings.json
