also copy the executable to the test dir

--- a/assignments/4-ShellP2/starter/makefile
+++ b/assignments/4-ShellP2/starter/makefile
@@ -10,22 +10,26 @@ SRCS = $(wildcard *.c)
 HDRS = $(wildcard *.h)
 
 # Default target
-all: $(TARGET)
+all: $(TARGET) copy_to_bats
 
 # Compile source to executable
 $(TARGET): $(SRCS) $(HDRS)
 	$(CC) $(CFLAGS) -o $(TARGET) $(SRCS)
 
+copy_to_bats: $(TARGET)
+	cp $(TARGET) bats/
+
 # Clean up build files
 clean:
 	rm -f $(TARGET)
+	rm -f bats/$(TARGET)
 
 test:
 	bats $(wildcard ./bats/*.sh)
 
 valgrind:
-	echo "pwd\nexit" | valgrind --leak-check=full --show-leak-kinds=all --error-exitcode=1 ./$(TARGET) 
-	echo "pwd\nexit" | valgrind --tool=helgrind --error-exitcode=1 ./$(TARGET) 
+	echo "pwd\nexit" | valgrind --leak-check=full --show-leak-kinds=all --error-exitcode=1 ./$(TARGET)
+	echo "pwd\nexit" | valgrind --tool=helgrind --error-exitcode=1 ./$(TARGET)
 
 # Phony targets
-.PHONY: all clean test
+.PHONY: all clean test copy_to_bats
